# Huffman-Compression

./: .gitignore  CMakeLists.txt  Makefile  README.md  clearCompress.sh  compress.cpp  encoder.cpp  test-script.sh  uncompress.cpp
cmake/: FindMetal.cmake
inc/: asyncEncoder.hpp  asyncGpuEncoder.hpp  asyncMixin.hpp  decoder.hpp  encoder.hpp  gpuEncoder.hpp  gpuMixin.hpp  huffmanNode.hpp  metalEncoder.hpp  threadsafeQueue.hpp
kernels/: CMakeLists.txt  comp.metal
sample-text/: small.txt
src/: AsyncEncoder.cpp  AsyncGpuEncoder.cpp  CMakeLists.txt  asyncMixin.cpp  compress.cpp  decoder.cpp  encoder.cpp  gpuEncoder.cpp  gpuMixin.cpp  huffmanNode.cpp  metalEncoder.cpp  uncompress.cpp
tests/: CMakeLists.txt  equivalent.cpp
tests/sample-text/: huffman.txt  smaller.txt
